# HilbertRaum

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  BUILD_STATE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_HilbertRaum_MVP.md  CLAUDE_Private_AI_Drive_Lite_MVP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DRIVE-NOTICES.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  TRADEMARKS.md  build.ninja  cla-smoke-test.md  flake.nix  loader.toml  package-lock.json  package.json
.github/: CLA-corporate.md  CLA.md
audits/: backend-audit-2026-06-27.md  full-audit-2026-06-28.md  full-audit-2026-06-29-followup.md  full-audit-2026-06-29-postmerge.md  full-audit-2026-06-29.md  full-audit-2026-06-30.md
docs/: IMPLEMENTATION_PLAN.md  architecture.md  audit-2026-06-09-multi-persona.md  audit-2026-06-13.md  audit-2026-07-16-remediation-plan.md  audit-2026-07-16.md  audit-2026-07-23-remediation-ledger.md  audit-2026-07-23-remediation-plan.md  audit-report-2026-07-23.md  backend-audit-2026-06-27-remediation-plan.md  benchmark.md  beta-feedback-2026-07-plan.md  big-slot-embeddings-plan.md  brand-refresh-plan.md  build-log.md  chat-docs-audit-2026-07-07.md  chat-docs-remediation-plan-2026-07-07.md  context-compaction-plan.md  data-contracts.md  design-guidelines.md  document-organization-audit-2026-06-14.md  document-organization-plan.md  drive-layout.md  evidence-pack-implementation-plan.md  evidence-pack-review-mode-feature-spec.md  full-doc-skills-plan.md  functionality-wave-3-plan.md  i18n-plan.md  (+50 more)
loader/launcher/: Cargo.toml
loader/launcher/src/: project.rs
(+841 files in other folders)
